# ENG_DADOS_SPARK

./: README.md  mkdocs.yml  pyproject.toml
docs/: delta.md  iceberg.md  index.md
notebooks/: 02_load_and_create_tables.ipynb
src/: spark_config.py
